force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/NCMT_TCO_Annual_Cost_Summary__c.object-meta.xml
<CustomObject>
    <label>NCMT TCO Annual Cost Summary</label>
    <nameField>
        <displayFormat>ACS-{000}</displayFormat>
        <label>NCMT AnnualCost Summary</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCMT TCO Annual Cost Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>