force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/Ann_Bldg_Mgmt_Cost__c.field-meta.xml
<CustomField>
    <fullName>Ann_Bldg_Mgmt_Cost__c</fullName>
    <formula>Building_Management_Services__c +  TCO_Addtl_Cost__r.Building_Management_Services__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Building Management Services Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>