force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/Ann_Gas_Cost__c.field-meta.xml
<CustomField>
    <fullName>Ann_Gas_Cost__c</fullName>
    <formula>Gas_Cost__c +  TCO_Addtl_Cost__r.Gas__c *  TCO_Project_Cost_Rate__r.Gas_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Gas Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>