force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/Ann_Grid_Cost__c.field-meta.xml
<CustomField>
    <fullName>Ann_Grid_Cost__c</fullName>
    <formula>Electricity_Grid_Cost__c +  TCO_Addtl_Cost__r.Electricity_Grid__c *  TCO_Project_Cost_Rate__r.Electricity_Base_Esc_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Grid Electricity Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>