force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/Ann_Landscape_Cost__c.field-meta.xml
<CustomField>
    <fullName>Ann_Landscape_Cost__c</fullName>
    <formula>Landscape_and_site_maintenance__c +  TCO_Addtl_Cost__r.Landscape_and_site_maintenance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Landscape Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>