force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/Ann_Minor_Repair_Cost__c.field-meta.xml
<CustomField>
    <fullName>Ann_Minor_Repair_Cost__c</fullName>
    <formula>Core_Shell_Minor_Repair_Cost__c + Maintenance_HP_Cost__c +  TCO_Addtl_Cost__r.Minor_repairs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Minor Repair Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>