force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/Ann_Reclaim_Water_Cost__c.field-meta.xml
<CustomField>
    <fullName>Ann_Reclaim_Water_Cost__c</fullName>
    <formula>Utility_Water_Cost__c +  TCO_Addtl_Cost__r.Non_potable_water__c *  TCO_Project_Cost_Rate__r.Non_Portable_Water_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Reclaimed Water Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>