force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/Ann_Routine_Maint_Cost__c.field-meta.xml
<CustomField>
    <fullName>Ann_Routine_Maint_Cost__c</fullName>
    <formula>Core_Shell_Controls_IT_Cost__c + Core_Shell_Maintenance_Cost__c +  TCO_Addtl_Cost__r.Routine_Maintenance_SLA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Routine Maint/SLA Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>