force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/Annual_Janitorial_Cost__c.field-meta.xml
<CustomField>
    <fullName>Annual_Janitorial_Cost__c</fullName>
    <formula>Janitorial_HP_Cost__c +  TCO_Addtl_Cost__r.Janitorial_Cleaning__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Janitorial Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>