force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/BT19__c.field-meta.xml
<CustomField>
    <fullName>BT19__c</fullName>
    <label>BT19</label>
    <summarizedField>NCMT_TCO_HP_Level_of_Service__c.BT19__c</summarizedField>
    <summaryFilterItems>
        <field>NCMT_TCO_HP_Level_of_Service__c.Land_Related__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>NCMT_TCO_HP_Level_of_Service__c.NPV_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>