force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/Building_EUI__c.field-meta.xml
<CustomField>
    <fullName>Building_EUI__c</fullName>
    <formula>IF(Project_Name__r.Total_GSF__c ==0,0,
((BT25__c + (Gas_Cost__c/ TCO_Project_Cost_Rate__r.Gas_Rate__c )) / Project_Name__r.Total_GSF__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building EUI (KBtu/GSF/Yr)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>