force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/Building_Management_Services__c.field-meta.xml
<CustomField>
    <fullName>Building_Management_Services__c</fullName>
    <formula>Project_Name__r.Total_GSF__c * 1.5/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Management Services</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>