force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/Building_O_M_Cost_SF__c.field-meta.xml
<CustomField>
    <fullName>Building_O_M_Cost_SF__c</fullName>
    <formula>IF(Project_Name__r.Total_GSF__c ==0,0,
((Annual_Janitorial_Cost__c + Ann_Bldg_Shell_Clean_Cost__c + Ann_Bldg_Supp_Cost__c + Ann_Landscape_Cost__c + Ann_Routine_Maint_Cost__c + Ann_Minor_Repair_Cost__c + Ann_Bldg_Mgmt_Cost__c )/ Project_Name__r.Total_GSF__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building O&amp;M Cost/SF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>