force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/Building_shell_cleaning__c.field-meta.xml
<CustomField>
    <fullName>Building_shell_cleaning__c</fullName>
    <label>Building shell cleaning</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>