force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/BV20__c.field-meta.xml
<CustomField>
    <fullName>BV20__c</fullName>
    <formula>(BT19__c/40)-MOD((BT19__c/40),3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Air Handler Fan Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>