force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/BV26__c.field-meta.xml
<CustomField>
    <fullName>BV26__c</fullName>
    <formula>IF( Project_Name__r.Total_GSF__c==0, 0,  (BV25__c * 1000)/ Project_Name__r.Total_GSF__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Power demand/SF (W/SF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>