force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/BW18__c.field-meta.xml
<CustomField>
    <fullName>BW18__c</fullName>
    <formula>(((BT17__c /3129)/60) * 1.5)-MOD((((BT17__c /3129)/60) * 1.5),100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DOAS Fan Size (cfm)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>