force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/BX13__c.field-meta.xml
<CustomField>
    <fullName>BX13__c</fullName>
    <formula>(BX12__c /1000)-MOD(BX12__c,10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Heating Equipment Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>