force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/BX7__c.field-meta.xml
<CustomField>
    <fullName>BX7__c</fullName>
    <formula>((((BT7__c)/8760) * 5)/12000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cooling Equipment Size(Tons)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>