force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/BZ13__c.field-meta.xml
<CustomField>
    <fullName>BZ13__c</fullName>
    <formula>if(BX13__c==0,0, Project_Name__r.Total_GSF__c / BX13__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GSF/kBtu of heating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>