force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/BZ20__c.field-meta.xml
<CustomField>
    <fullName>BZ20__c</fullName>
    <formula>IF(Project_Name__r.Total_GSF__c==0,0,(BT19__c/60)/ Project_Name__r.Total_GSF__c)*1.5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BZ20</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>