force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/BZ7__c.field-meta.xml
<CustomField>
    <fullName>BZ7__c</fullName>
    <formula>if(BX7__c==0, 0, Project_Name__r.Total_GSF__c /BX7__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GSF/Ton of cooling</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>