force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/Core_Shell_Water_Cost__c.field-meta.xml
<CustomField>
    <fullName>Core_Shell_Water_Cost__c</fullName>
    <label>Core Shell Water Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>