force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/Electricity_Grid_Cost__c.field-meta.xml
<CustomField>
    <fullName>Electricity_Grid_Cost__c</fullName>
    <label>Electricity Grid Cost</label>
    <summarizedField>NCMT_TCO_HP_Level_of_Service__c.Grid_Energy_Cost_WF_c__c</summarizedField>
    <summaryForeignKey>NCMT_TCO_HP_Level_of_Service__c.NPV_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>