force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/NCMT_TCO_Lifecycle_Input__c.field-meta.xml
<CustomField>
    <fullName>NCMT_TCO_Lifecycle_Input__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCMT TCO Lifecycle Input</label>
    <referenceTo>NCMT_TCO_Lifecycle_Input__c</referenceTo>
    <relationshipLabel>NCMT TCO Annual Cost Summary</relationshipLabel>
    <relationshipName>NCMT_TCO_Annual_Cost_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>