force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/Other_Cooling_Cost__c.field-meta.xml
<CustomField>
    <fullName>Other_Cooling_Cost__c</fullName>
    <label>Annual Other Cooling Cost</label>
    <summarizedField>NCMT_TCO_HP_Level_of_Service__c.Other_Cooling_Cost_WF__c</summarizedField>
    <summaryForeignKey>NCMT_TCO_HP_Level_of_Service__c.NPV_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>