force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/Performance_Input__c.field-meta.xml
<CustomField>
    <fullName>Performance_Input__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TCO Performance Input</label>
    <referenceTo>NCMT_TCO_Performance_Input__c</referenceTo>
    <relationshipName>NCMT_NPV_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>