force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/Portable_Water_Cost__c.field-meta.xml
<CustomField>
    <fullName>Portable_Water_Cost__c</fullName>
    <label>Potable Water Cost</label>
    <summarizedField>NCMT_TCO_HP_Level_of_Service__c.Water_Portable_WF__c</summarizedField>
    <summaryForeignKey>NCMT_TCO_HP_Level_of_Service__c.NPV_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>