force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/Supplies_Cost__c.field-meta.xml
<CustomField>
    <fullName>Supplies_Cost__c</fullName>
    <label>Supplies Cost</label>
    <summarizedField>NCMT_TCO_HP_Level_of_Service__c.Supplies_Cost_WF__c</summarizedField>
    <summaryFilterItems>
        <field>NCMT_TCO_HP_Level_of_Service__c.Land_Related__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>NCMT_TCO_HP_Level_of_Service__c.NPV_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>