force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/TCO_Addtl_Cost__c.field-meta.xml
<CustomField>
    <fullName>TCO_Addtl_Cost__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TCO Additional Cost</label>
    <referenceTo>NCMT_TCO_Additional_Cost__c</referenceTo>
    <relationshipName>NCMT_NPV_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>