force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/TCO_Project_Cost_Rate__c.field-meta.xml
<CustomField>
    <fullName>TCO_Project_Cost_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TCO Project Cost Rate</label>
    <referenceTo>NCMT_Project_Cost_Rate__c</referenceTo>
    <relationshipName>NCMT_NPV_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>