force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/Total_TCO_NPV_SF__c.field-meta.xml
<CustomField>
    <fullName>Total_TCO_NPV_SF__c</fullName>
    <formula>IF(Project_Name__r.Total_GSF__c == 0, 0 , (NCMT_TCO_Lifecycle_Input__r.Total_Cost__c / Project_Name__r.Total_GSF__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total TCO NPV/SF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>