force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/Total_TI_Refresh_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_TI_Refresh_Cost__c</fullName>
    <label>Total TI Refresh Cost</label>
    <summarizedField>NCMT_TCO_HP_Level_of_Service__c.TI_Refresh_Cost_WF__c</summarizedField>
    <summaryForeignKey>NCMT_TCO_HP_Level_of_Service__c.NPV_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>