force-app/main/default/objects/NCMT_TCO_Annual_Cost_Summary__c/fields/Update_Flag__c.field-meta.xml
<CustomField>
    <fullName>Update_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Flag</label>
    <type>Checkbox</type>
</CustomField>